# Brain-Tumor-Detection

./: .gitignore  README.md
backend/: pyproject.toml
backend/scripts/: init_db.py
backend/src/brain_tumor/: database.py  main.py
backend/src/brain_tumor/config/: setting.py
backend/src/brain_tumor/models/: class_dict.npy  prediction.py
backend/src/brain_tumor/routes/: prediction.py
backend/src/brain_tumor/services/: model_service.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx
frontend/src/assets/: index.js
frontend/src/component/: Benefits.jsx  FileUplaod.jsx  Header.jsx  Hero.jsx  Notification.jsx  PredictionResult.jsx  Pricing.jsx  Services.jsx
frontend/src/component/design/: Services.jsx
frontend/src/constants/: index.js
frontend/src/pages/: Home.jsx  Prediction.jsx
frontend/src/services/: frontend-api.js
model/: requirements.txt
